--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview", 
+    "gh_build": "vite build --base '/traffic-trends/'"
   },
   "dependencies": {
     "vue": "^3.2.45",
